--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
   },
   "homepage": "https://github.com/rahulsups/habit-tracker#readme",
   "dependencies": {
+    "buffer": "^6.0.3",
     "connect-flash": "^0.1.1",
     "dotenv": "^8.6.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
-    "mongoose": "^5.9.25"
+    "mongoose": "^5.9.25",
+    "node-sass-middleware": "^1.0.1",
+    "nodemailer-express-handlebars": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
