--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A simple habit tracking app based on NodeJS + EJS for user habit management on daily and weekly basis.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
